# mpparse

./: .gitignore  Cargo.toml  README.md
src/: fixed.rs  lib.rs  model.rs  mpp14.rs  util.rs  var.rs
tests/: synthetic.rs
typst/: README.md  mpp_rs.wasm
